<resources>
    <string name="app_name">Simple Notepad</string>
    <string name="edit_reminder_title">Simple Notepad</string>
    <string name="no_reminders">There is not any notes here...</string>
    <string name="menu_insert">Add Note</string>
    <string name="menu_about">About</string>
    <string name="menu_delete">Delete Note</string>
    <string name="menu_share">Share</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="confirm">Save</string>
    <string name="edit_reminder">Edit Reminder</string>
    <string name="date">Reminder Date</string>
    <string name="time">Reminder Time</string>
    <string name="save_automatically">Notes are saved automatically</string>
    <string name="banner_ad_unit_id">ca-app-pub-1541045839364233/2475522903</string>
    <string name="banner_ad_unit_id_about">ca-app-pub-1541045839364233/8432828108</string>

    <!-- Toasts -->
    <string name="task_saved_message">Note has been saved</string>

    <!-- Notification Bar -->
    <string name="notify_new_task_message">A task needs to be reviewed!</string>
    <string name="notify_new_task_title">Task Reminder!</string>

    <!-- Preferences -->
    <string name="pref_category_task_defaults_key">task_default_category</string>
    <string name="pref_category_task_defaults_title">Task Title Default</string>
    <string name="pref_task_title_key">default_reminder_title</string>
    <string name="pref_task_title_dialog_title">Default Reminder Title</string>
    <string name="pref_task_title_message">The default title for a reminder.</string>
    <string name="pref_task_title_summary">Default title for reminders.</string>
    <string name="pref_task_title_title">Default Reminder Title</string>

    <string name="pref_category_datetime_key">date_time_default_category</string>
    <string name="pref_category_datetime_title">Date Time Defaults</string>
    <string name="pref_default_time_from_now_key">time_from_now_default</string>
    <string name="pref_default_time_from_now_dialog_title">Time From Now</string>
    <string name="pref_default_time_from_now_message">The default time from now that a new reminder should be set to.</string>
    <string name="pref_default_time_from_now_summary">Sets the default time for a reminder.</string>
    <string name="pref_default_time_from_now_title">Default Reminder Time</string>

    <!-- About -->
    <string name="urlInstagram"><a href="https://www.instagram.com/matt_hco">Instagram</a></string>
    <string name="urlFacebook"><a href="https://www.facebook.com/profile.php?id=100003219533803">Facebook</a></string>
    <string name="email">matheus-1199@hotmail.com</string>


</resources>
