<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
    	xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent">
    	<LinearLayout
    		android:orientation="vertical"
    		android:layout_width="fill_parent"
    		android:layout_height="fill_parent">
     		<TextView android:layout_width="wrap_content"
     			android:layout_height="wrap_content"
     			android:text="@string/title" />
     		<EditText android:id="@+id/title"
     		  android:layout_width="fill_parent"
     			android:layout_height="wrap_content"
     			/>
     		<TextView android:layout_width="wrap_content"
     			android:layout_height="wrap_content"
     			android:text="@string/body" />
     		<EditText android:id="@+id/body" android:layout_width="fill_parent"
     			android:layout_height="wrap_content"
     			android:minLines="12"
     			android:scrollbars="vertical"
     			android:gravity="top" />

			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:text="@string/save_automatically"
				android:id="@+id/textView"
				android:layout_gravity="center_horizontal" />

			<TextView android:layout_width="wrap_content"
     			android:layout_height="wrap_content"
     			android:text=""
				android:id="@+id/l2" />

			<RelativeLayout
				android:orientation="horizontal"
				android:layout_width="match_parent"
				android:layout_height="58dp">


			</RelativeLayout>

			<Button
     			android:id="@+id/reminder_date"
     			android:layout_height="1dp"
     			android:layout_width="1dp"
     			/>

			<TextView android:layout_width="wrap_content"
     			android:layout_height="wrap_content"
     			android:text="" />

			<Button
     			android:id="@+id/reminder_time"
     			android:layout_height="1dp"
     			android:layout_width="1dp"
     			/>

		</LinearLayout>
     </ScrollView>
